@@ -19,7 +19,7 @@ public class ThreeDimensionalProjection implements ProjectionStrategy {
     public List<ProjectedPoint> project(EmbeddingSpace space, int xAxis, int yAxis) throws InvalidAxisException {
         var vectors = space.getVectors();
         if (!vectors.isEmpty()) {
-            int dim = vectors.get(0).getVector().length;
+            int dim = vectors.getFirst().getVector().length;
             validateAxis(xAxis, dim);
             validateAxis(yAxis, dim);
             validateAxis(zAxis, dim);
